--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -10,11 +10,6 @@
             <div class="nav-collapse collapse" id="nav-collapse-03">
               <ul class="nav">
                 <li>
-                  <a href="http://dssg.io/2013/05/21/the-fellowship-and-the-fellows.html">
-                    About
-                </a>
-                </li>
-                <li>
                   <a href="/people">
                     People
                   </a>
@@ -37,6 +32,11 @@
                 <li>
                   <a href="/blog">
                     Blog
+                  </a>
+                </li>
+                 <li>
+                  <a href="/media">
+                    Media
                   </a>
                 </li>
               </ul> <!-- /nav -->
