Created a new team layout, modifite site.css to handle unordered lists, and created a team site for enroll.

--- a/css/site.css
+++ b/css/site.css
@@ -35,6 +35,18 @@ p {
         margin-bottom: 30px;
 }
 
+ul {
+        font-size: 20px;
+        line-height: 32px;
+        color: rgb(73, 78, 85);
+        font-family: 'ff-tisa-web-pro', Georgia, Cambria, 'Times New Roman', Times, serif;
+        margin-bottom: 30px;
+}
+
+li {
+    margin-bottom: 10px;
+}
+
 
 /* Pretty text highlighting */
 ::selection {
